// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serializeMessage serializes a message into an array buffer 1`] = `
Uint8Array [
  27,
  146,
  177,
  79,
  112,
  101,
  110,
  78,
  101,
  119,
  84,
  97,
  98,
  82,
  101,
  113,
  117,
  101,
  115,
  116,
  129,
  165,
  84,
  105,
  116,
  108,
  101,
  192,
]
`;

exports[`serializeMessage serializes a message into an array buffer 2`] = `
Uint8Array [
  25,
  146,
  175,
  79,
  112,
  101,
  110,
  78,
  101,
  119,
  84,
  97,
  98,
  82,
  101,
  112,
  108,
  121,
  129,
  162,
  73,
  100,
  163,
  49,
  50,
  51,
]
`;

exports[`serializeMessage serializes a message into an array buffer 3`] = `
Uint8Array [
  39,
  146,
  176,
  82,
  101,
  115,
  105,
  122,
  101,
  84,
  97,
  98,
  82,
  101,
  113,
  117,
  101,
  115,
  116,
  131,
  165,
  84,
  97,
  98,
  73,
  100,
  161,
  49,
  164,
  67,
  111,
  108,
  115,
  1,
  164,
  82,
  111,
  119,
  115,
  1,
]
`;

exports[`serializeMessage serializes a message into an array buffer 4`] = `
Uint8Array [
  37,
  146,
  176,
  83,
  101,
  110,
  100,
  73,
  110,
  112,
  117,
  116,
  82,
  101,
  113,
  117,
  101,
  115,
  116,
  130,
  165,
  84,
  97,
  98,
  73,
  100,
  161,
  49,
  167,
  80,
  97,
  121,
  108,
  111,
  97,
  100,
  161,
  104,
]
`;

exports[`serializeMessage serializes a message into an array buffer 5`] = `
Uint8Array [
  30,
  146,
  177,
  79,
  112,
  101,
  110,
  79,
  117,
  116,
  112,
  117,
  116,
  82,
  101,
  113,
  117,
  101,
  115,
  116,
  129,
  165,
  84,
  97,
  98,
  73,
  100,
  163,
  49,
  50,
  51,
]
`;

exports[`serializeMessage serializes a message into an array buffer 6`] = `
Uint8Array [
  33,
  146,
  171,
  79,
  117,
  116,
  112,
  117,
  116,
  69,
  118,
  101,
  110,
  116,
  130,
  165,
  84,
  97,
  98,
  73,
  100,
  163,
  49,
  50,
  51,
  164,
  68,
  97,
  116,
  97,
  147,
  1,
  2,
  3,
]
`;
